# PyHOPE

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTORS.md  README.md  paper.bib  paper.md  pyhope.py  pyproject.toml  pyrightconfig.json  requirements.txt  uvwxyz.py
.docker/: build.sh  build_macos.py  build_manylinux.py  pyproject.toml
.docker/fedora_41/: dockerfile
.docker/fedora_41_x86_64/: dockerfile
.docker/python_3.10.16-bookworm/: dockerfile
.docker/python_3.11.11-bookworm/: dockerfile
.docker/python_3.12.9-bookworm/: dockerfile
.docker/python_3.13.1-bookworm/: dockerfile
.docker/python_3.13.2-bookworm/: dockerfile
.docker/python_3.14-rc-bookworm/: dockerfile
.gmsh/: build.sh  build_macos.py  build_manylinux.py
.gmsh/patches/: serendipity_2nd_pyra.patch
.typings/: .gitignore
docker/: build.sh  build_wheel.py  setup.py
pyhope/: __init__.py  __main__.py  pyhope.py
pyhope/basis/: basis_basis.py  basis_connect.py  basis_jacobian.py  basis_watertight.py
pyhope/common/: common.py  common_parallel.py  common_progress.py  common_tools.py  common_vars.py  helper.py
pyhope/gmsh/: gmsh_install.py
pyhope/io/: io.py  io_cgns.py  io_gmsh.py  io_meshio.py  io_vars.py  io_vtk.py
pyhope/mesh/: mesh.py  mesh_builtin.py  mesh_common.py  mesh_connect.py  mesh_duplicates.py  mesh_external.py  mesh_orient.py  mesh_scale.py  mesh_sides.py  mesh_sort.py  mesh_transform.py  mesh_vars.py
pyhope/meshio/: meshio_convert.py  meshio_ordering.py  reorder.py
pyhope/output/: output.py
pyhope/readintools/: commandline.py  readintools.py
src/: __main__.py  pyhope.py
src/io/: io.py  (+4 more)
tools/: create_stubs.py
(+109 files in other folders)
