[build-system]
requires      = ['setuptools>=42', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name        = 'gmsh'
version     = '4.13.1'
description = 'Gmsh with updated CGNS, OpenCASCADE, and local static libraries'
readme      = 'README.md'
authors     = [
                { name='Patrick Kopper', email='kopper@iag.uni-stuttgart.de' }
]
requires-python = '>=3.6'
license     = { text = 'GNU General Public License v2 (GPLv2)' }
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Operating System :: Linux',
    'Intended Audience: NRG'
]
dependencies = []  # Add any required dependencies

[project.urls]
homepage    = 'https://gitlab.iag.uni-stuttgart.de/libs/python-gmsh'

[tool.setuptools]
packages    = ['gmsh']
py-modules  = ['gmsh']
package-dir = { 'gmsh' = 'gmsh' }

[tool.setuptools.package-data]
gmsh = [
    'share/gmsh/examples/api/*.py',
    'share/gmsh/examples/api/*.stl',
    'share/gmsh/examples/api/*.geo',
]

[tool.setuptools.data-files]
'share/gmsh' = [
    'gmsh_install/share/doc/gmsh/CHANGELOG.txt',
    'gmsh_install/share/doc/gmsh/CREDITS.txt'
]
'bin' = [
    'gmsh_install/bin/adf2hdf',
    'gmsh_install/bin/cgnsconvert',
    'gmsh_install/bin/gmsh'
]
'lib' = [
    'gmsh_install/lib64/libgmsh.so',
    'gmsh_install/lib64/libgmsh.so.4.13',
    'gmsh_install/lib64/libgmsh.so.4.13.1',
    # 'gmsh_install/lib64/libjpeg.so',
    # 'gmsh_install/lib64/libjpeg.so.62',
    # 'gmsh_install/lib64/libjpeg.so.62.4.0'
]

